mar kiirja a kerdeset

--- a/Hajos/wwwroot/hajos.css
+++ b/Hajos/wwwroot/hajos.css
@@ -46,3 +46,16 @@ div {
 
 .kerdes {
 }
+
+.kattintható:hover {
+	background-color: navy;
+	color: white;
+}
+
+.jo {
+	color: green;
+}
+
+.rossz {
+	color: red;
+}
